--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png">
     <style>
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Delius', sans-serif;
         margin: 0;
         padding: 0;
       }
