--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Arpan Nyati</title><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet"><link rel="icon" type="image/svg+xml" href="/favicon.png"><style>body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Delius', sans-serif;
         margin: 0;
         padding: 0;
       }</style></head><body><div id="root"></div><script defer="defer" src="/bundle.js"></script></body></html>
